--- a/unity-project/Assets/WebGLTemplates/LiveKit/index.html
+++ b/unity-project/Assets/WebGLTemplates/LiveKit/index.html
@@ -10,8 +10,11 @@
   <body>
     <div id="unity-container">
       <div id="header">
-        <img id="lklogo" src="TemplateData/livekit.svg" />
-        <div id="unity-fullscreen-button"></div>
+        <div>
+          <img id="lklogo" src="TemplateData/livekit.svg" />
+          <span>FOR UNITY</span>
+        </div>
+        <div id="unity-fullscreen-button"><span>FULLSCREEN<img src="TemplateData/maximize.svg"/></span></div>
       </div>
 
       <canvas id="unity-canvas"></canvas>
@@ -23,8 +26,8 @@
       </div>
       <div id="unity-warning"> </div>
       <div id="unity-footer">
-        <span id="buildmsg">Built with LiveKit Unity SDK</span>
-        <a id="githublink" href="https://github.com/livekit/client-unity-demo" target="_blank"> 
+        <a id="githublink" href="https://github.com/livekit/client-unity-demo" target="_blank">
+          <span>Built with LiveKit Unity SDK</span>
           <img src="TemplateData/github-icon.svg"/>
         </a>
       </div>
